# raytracer

./: Cargo.toml  LICENSE  README.md
exercises/: circle.rs  clock.rs  cover.rs  csg.rs  glass_bubble.rs  hexagon.rs  pattern.rs  plane.rs  projectile.rs  room.rs  scene.rs  shading.rs  teapot.rs
images/: clock.ppm  shading.ppm  sphere.ppm  teapot.ppm  trajectory.ppm
images/ppm/: clock.ppm
resources/cover/: camera.yml  world.yml
src/: canvas.rs  color.rs  lib.rs  main.rs  tuple.rs
src/core/: canvas.rs  color.rs  intersection.rs  matrix.rs  object.rs  point.rs  ray.rs  tuple.rs  vector.rs
src/exercises/: clock.rs  projectile.rs  sphere.rs
src/graphics/: canvas.rs  color.rs  pattern.rs
src/graphics/patterns/: checker.rs  gradient.rs  ring.rs  stripe.rs
src/io/: obj.rs
src/raytracer/: bounds.rs  camera.rs  intersection.rs  material.rs  object.rs  point_light.rs  ray.rs  shape.rs  sphere.rs  world.rs
src/raytracer/shapes/: compound.rs  plane.rs  primitive.rs  shape.rs  single.rs  sphere.rs
