[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
itertools = "0.10.2"
ordered-float = "2.10"

[[bin]]
name = "circle"
path = "exercises/circle.rs"

[[bin]]
name = "clock"
path = "exercises/clock.rs"

[[bin]]
name = "plane"
path = "exercises/plane.rs"

[[bin]]
name = "projectile"
path = "exercises/projectile.rs"

[[bin]]
name = "scene"
path = "exercises/scene.rs"

[[bin]]
name = "shading"
path = "exercises/shading.rs"

