[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
# debug = true

[dependencies]
approx = "0.5.1"
itertools = "0.10.3"
im = "15.0.0"

[[bin]]
name = "circle"
path = "exercises/circle.rs"

[[bin]]
name = "clock"
path = "exercises/clock.rs"

[[bin]]
name = "csg"
path = "exercises/csg.rs"

[[bin]]
name = "hexagon"
path = "exercises/hexagon.rs"

[[bin]]
name = "plane"
path = "exercises/plane.rs"

[[bin]]
name = "projectile"
path = "exercises/projectile.rs"

[[bin]]
name = "scene"
path = "exercises/scene.rs"

[[bin]]
name = "shading"
path = "exercises/shading.rs"

[[bin]]
name = "teapot"
path = "exercises/teapot.rs"

