[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
# debug = true

[dependencies]
approx = "0.5.1"
itertools = "0.10.3"
im-rc = "15.1.0"
rayon = "1.5.3"
enum_dispatch = "0.3.8"
noise = "0.7.0"

[[bin]]
name = "circle"
path = "exercises/circle.rs"

[[bin]]
name = "clock"
path = "exercises/clock.rs"

[[bin]]
name = "cover"
path = "exercises/cover.rs"

[[bin]]
name = "csg"
path = "exercises/csg.rs"

[[bin]]
name = "glass_bubble"
path = "exercises/glass_bubble.rs"

[[bin]]
name = "hexagon"
path = "exercises/hexagon.rs"

[[bin]]
name = "pattern"
path = "exercises/pattern.rs"

[[bin]]
name = "plane"
path = "exercises/plane.rs"

[[bin]]
name = "projectile"
path = "exercises/projectile.rs"

[[bin]]
name = "room"
path = "exercises/room.rs"

[[bin]]
name = "scene"
path = "exercises/scene.rs"

[[bin]]
name = "shading"
path = "exercises/shading.rs"

[[bin]]
name = "teapot"
path = "exercises/teapot.rs"

